# OS_labs

./: .gitignore
lab_1/: CMakeLists.txt  README.md  build.bat  build.sh
lab_2/: README.md  launch_lib.cpp  launch_lib.h  test_utility  test_utility.cpp
lab_3/: Makefile  README.md  counter.cpp  counter.h  logger.cpp  logger.h  main.cpp  process_manager.cpp  process_manager.h
lab_4/: CMakeLists.txt  README.md  Readme.md  device.cc  logger.cc
lab_4/reader/: CMakeLists.txt  temperature_reader.cpp
lab_4/simulator/: CMakeLists.txt  temperature_simulator.cpp
lab_4/utils/: measur.h
lab_4/utils/npipe/: npipe.cc  npipe.h
lab_5/: CMakeLists.txt  Readme.md
lab_5/client/: script.js
lab_5/server/: CMakeLists.txt  server.cpp
test/: database_handler.cpp  http_server.cpp  serial_reader.cpp  temperature_server.cpp
